syntax = "proto3";

option csharp_namespace = "AuthServiceGrpcServer";

package AuthServiceGrpcServer;

service AuthServiceProto {
    rpc SignUp (SignUpRequest) returns (SignUpResponse);
}

message SignUpRequest {
    string email = 1;
    string password = 2;
    string confirmPassword = 3;
}

message SignUpResponse {
    bool success = 1;
    string message = 2;
}